apps/payload-blog/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: payload-blog
spec:
  parentRefs:
    - name: external-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "kousuke.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: payload-blog
          port: 80
